# template-python-copilot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: changelog.md  codestyle.md  index.md  project.md  project_tooling.md  roadmap.md
notebooks/: notebook.ipynb
scripts/: script.py
src/: __init__.py  main.py
tests/: test_main.py
